--- a/index.html
+++ b/index.html
@@ -4,54 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>goit-markup-hw-02</title>
   </head>
-  <body>
+  <body class="page">
     <!-- Шапка сайту -->
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="header-contacts">
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+      </div>
     </header>
     <!-- Основний контент -->
     <main>
       <!-- Блок герой -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <!-- Особливості -->
-      <section>
-        <ul>
+      <section class="section">
+        <ul class="feature-list list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <!-- Чим ми займаємось -->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/box1.jpg"
@@ -79,40 +82,40 @@
         </ul>
       </section>
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="cards list">
           <li>
             <img src="./images/card1.jpg" alt="Фото чоловіка" width="270" height="260" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Ігор Дем'яненко</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./images/card2.jpg" alt="Фото жінки" width="270" height="260" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Ольга Рєпіна</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/card3.jpg" alt="Фото чоловіка" width="270" height="260" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title">Микола Тарасов</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./images/card4.jpg" alt="Фото чоловіка" width="270" height="260" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Михайло Єрмаков</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Підвал -->
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
-      <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <footer class="footer">
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <address class="address">
+        <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="list">
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
