Додав стилі для кнопок

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
@@ -27,13 +27,13 @@
     <!-- Основний контент -->
     <main>
         <!-- Фільтри -->
-        <section>
+        <section class="filters">
             <ul class="list">
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button type="button" class="filter-btn">Все</button></li>
+                <li><button type="button" class="filter-btn">Веб-сайти</button></li>
+                <li><button type="button" class="filter-btn">Додатки</button></li>
+                <li><button type="button" class="filter-btn">Дизайн</button></li>
+                <li><button type="button" class="filter-btn">Маркетинг</button></li>
             </ul>
         </section>
         <!-- Проекти -->
