--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./index.html" class="link current">Студія</a></li>
           <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
@@ -28,7 +28,7 @@
       <!-- Блок герой -->
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
       <!-- Особливості -->
       <section class="section">
