Додав частину оформлення тексту

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>goit-markup-hw-02</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="page">
-      <body class="page">
+  <body>
     <!-- Шапка сайту -->
     <header class="header">
       <nav>
@@ -26,66 +29,91 @@
     </header>
     <!-- Основний контент -->
     <main>
-        <!-- Фільтри -->
-        <section class="filters">
-            <ul class="list">
-                <li><button type="button" class="filter-btn">Все</button></li>
-                <li><button type="button" class="filter-btn">Веб-сайти</button></li>
-                <li><button type="button" class="filter-btn">Додатки</button></li>
-                <li><button type="button" class="filter-btn">Дизайн</button></li>
-                <li><button type="button" class="filter-btn">Маркетинг</button></li>
-            </ul>
-        </section>
-        <!-- Проекти -->
-        <section class="projects">
-            <ul class="list">
-                <li>
-                  <img src="/images/project1.jpg" alt="Ноутбук з зображенням веб-сторінки" width="370" height="294">
-                  <h3>Технокряк</h3>
-                  <p>Веб-сайт</p>
-                </li>
-                <li>
-                  <img src="/images/project2.jpg" alt="Два баскетболіста, які змагаються за м'яч" width="370" height="294">
-                  <h3>Постер New Orlean vs Golden Star</h3>
-                  <p>Дизайн</p>
-                </li>
-                <li>
-                  <img src="/images/project3.jpg" alt="Логотип з написом на фоні рибини" width="370" height="294">
-                  <h3>Ресторан Seafood</h3>
-                  <p>Додаток</p>
-                </li>
-                <li>
-                  <img src="/images/project4.jpg" alt="Навушники" width="370" height="294">
-                  <h3>Проєкт Prime</h3>
-                  <p>Маркетинг</p>
-                </li>
-                <li>
-                  <img src="/images/project5.jpg" alt="Дві картонні коробки" width="370" height="294">
-                  <h3>Проєкт Boxes</h3>
-                  <p>Додаток</p>
-                </li>
-                <li>
-                  <img src="/images/project6.jpg" alt="Веб-сайт на моніторі комп'ютера" width="370" height="294">
-                  <h3>Inspiration has no Borders</h3>
-                  <p>Веб-сайт</p>
-                </li>
-                <li>
-                  <img src="/images/project7.jpg" alt="Відкрита книга" width="370" height="294">
-                  <h3>Видання Limited Edition</h3>
-                  <p>Дизайн</p>
-                </li>
-                <li>
-                  <img src="/images/project8.jpg" alt="Бірка з логотипом" width="370" height="294">
-                  <h3>Проект LAB</h3>
-                  <p>Маркетинг</p>
-                </li>
-                <li>
-                  <img src="/images/project9.jpg" alt="Ноутбук з зображенням веб-сторінки" width="370" height="294">
-                  <h3>Growing Business</h3>
-                  <p>Додаток</p>
-                </li>
-            </ul>
-        </section>
+      <!-- Фільтри -->
+      <section class="filters">
+        <ul class="list">
+          <li><button type="button" class="filter-btn">Все</button></li>
+          <li><button type="button" class="filter-btn">Веб-сайти</button></li>
+          <li><button type="button" class="filter-btn">Додатки</button></li>
+          <li><button type="button" class="filter-btn">Дизайн</button></li>
+          <li><button type="button" class="filter-btn">Маркетинг</button></li>
+        </ul>
+      </section>
+      <!-- Проекти -->
+      <section class="projects">
+        <ul class="list">
+          <li>
+            <img
+              src="/images/project1.jpg"
+              alt="Ноутбук з зображенням веб-сторінки"
+              width="370"
+              height="294"
+            />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="/images/project2.jpg"
+              alt="Два баскетболіста, які змагаються за м'яч"
+              width="370"
+              height="294"
+            />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="/images/project3.jpg"
+              alt="Логотип з написом на фоні рибини"
+              width="370"
+              height="294"
+            />
+            <h3>Ресторан Seafood</h3>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="/images/project4.jpg" alt="Навушники" width="370" height="294" />
+            <h3>Проєкт Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="/images/project5.jpg" alt="Дві картонні коробки" width="370" height="294" />
+            <h3>Проєкт Boxes</h3>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img
+              src="/images/project6.jpg"
+              alt="Веб-сайт на моніторі комп'ютера"
+              width="370"
+              height="294"
+            />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="/images/project7.jpg" alt="Відкрита книга" width="370" height="294" />
+            <h3>Видання Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="/images/project8.jpg" alt="Бірка з логотипом" width="370" height="294" />
+            <h3>Проект LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="/images/project9.jpg"
+              alt="Ноутбук з зображенням веб-сторінки"
+              width="370"
+              height="294"
+            />
+            <h3>Growing Business</h3>
+            <p>Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Підвал -->
     <footer class="footer">
