--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <!-- Шапка сайту -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
           <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
