Додав стилі (колір, шрифт)

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
       <section class="section">
         <ul class="feature-list list">
           <li>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="title">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
+            <h3 class="title">Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="title">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
@@ -114,12 +114,12 @@
     </main>
     <!-- Підвал -->
     <footer class="footer">
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
       <address class="address">
         <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link text">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link text">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
