--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <div class="header-contacts">
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-      </div>
+      <ul class="header-contacts list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <!-- Основний контент -->
     <main>
@@ -36,6 +36,7 @@
       </section>
       <!-- Особливості -->
       <section class="section">
+        <h2 class="feature-title">Наші сильні сторони</h2>
         <ul class="feature-list list">
           <li>
             <h3 class="title">Увага до деталей</h3>
@@ -116,10 +117,18 @@
     <footer class="footer">
       <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
       <address class="address">
-        <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="link text">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="link text">+38 096 111 11 11</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="link primary"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br /></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
