--- a/portfolio.html
+++ b/portfolio.html
@@ -22,95 +22,113 @@
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <div class="header-contacts">
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-      </div>
+      <ul class="header-contacts list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <!-- Основний контент -->
     <main>
-      <!-- Фільтри -->
-      <section class="filters">
-        <ul class="list">
+      <!-- Наші роботи -->
+      <section>
+        <h1 class="works-title">Наші роботи</h1>
+        <!-- Фільтри -->
+        <ul class="filters list">
           <li><button type="button" class="filter-btn">Все</button></li>
           <li><button type="button" class="filter-btn">Веб-сайти</button></li>
           <li><button type="button" class="filter-btn">Додатки</button></li>
           <li><button type="button" class="filter-btn">Дизайн</button></li>
           <li><button type="button" class="filter-btn">Маркетинг</button></li>
         </ul>
-      </section>
-      <!-- Проекти -->
-      <section class="projects">
-        <ul class="list">
+        <!-- Проекти -->
+        <ul class="projects list">
           <li>
-            <img
-              src="/images/project1.jpg"
-              alt="Ноутбук з зображенням веб-сторінки"
-              width="370"
-              height="294"
-            />
-            <h3 class="title">Технокряк</h3>
-            <p class="text">Веб-сайт</p>
+            <a href="" class="link"
+              ><img
+                src="/images/project1.jpg"
+                alt="Ноутбук з зображенням веб-сторінки"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="/images/project2.jpg"
-              alt="Два баскетболіста, які змагаються за м'яч"
-              width="370"
-              height="294"
-            />
-            <h3 class="title">Постер New Orlean vs Golden Star</h3>
-            <p class="text">Дизайн</p>
+            <a href="" class="link">
+              <img
+                src="/images/project2.jpg"
+                alt="Два баскетболіста, які змагаються за м'яч"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p class="text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="/images/project3.jpg"
-              alt="Логотип з написом на фоні рибини"
-              width="370"
-              height="294"
-            />
-            <h3 class="title">Ресторан Seafood</h3>
-            <p class="text">Додаток</p>
+            <a href="" class="link">
+              <img
+                src="/images/project3.jpg"
+                alt="Логотип з написом на фоні рибини"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="text">Додаток</p>
+            </a>
           </li>
           <li>
-            <img src="/images/project4.jpg" alt="Навушники" width="370" height="294" />
-            <h3 class="title">Проєкт Prime</h3>
-            <p class="text">Маркетинг</p>
+            <a href="" class="link">
+              <img src="/images/project4.jpg" alt="Навушники" width="370" height="294" />
+              <h2 class="title">Проєкт Prime</h2>
+              <p class="text">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img src="/images/project5.jpg" alt="Дві картонні коробки" width="370" height="294" />
-            <h3 class="title">Проєкт Boxes</h3>
-            <p class="text">Додаток</p>
+            <a href="" class="link">
+              <img src="/images/project5.jpg" alt="Дві картонні коробки" width="370" height="294" />
+              <h2 class="title">Проєкт Boxes</h2>
+              <p class="text">Додаток</p></a
+            >
           </li>
           <li>
-            <img
-              src="/images/project6.jpg"
-              alt="Веб-сайт на моніторі комп'ютера"
-              width="370"
-              height="294"
-            />
-            <h3 class="title">Inspiration has no Borders</h3>
-            <p class="text">Веб-сайт</p>
+            <a href="" class="link">
+              <img
+                src="/images/project6.jpg"
+                alt="Веб-сайт на моніторі комп'ютера"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p></a
+            >
           </li>
           <li>
-            <img src="/images/project7.jpg" alt="Відкрита книга" width="370" height="294" />
-            <h3 class="title">Видання Limited Edition</h3>
-            <p class="text">Дизайн</p>
+            <a href="" class="link">
+              <img src="/images/project7.jpg" alt="Відкрита книга" width="370" height="294" />
+              <h2 class="title">Видання Limited Edition</h2>
+              <p class="text">Дизайн</p></a
+            >
           </li>
           <li>
-            <img src="/images/project8.jpg" alt="Бірка з логотипом" width="370" height="294" />
-            <h3 class="title">Проект LAB</h3>
-            <p class="text">Маркетинг</p>
+            <a href="" class="link">
+              <img src="/images/project8.jpg" alt="Бірка з логотипом" width="370" height="294" />
+              <h2 class="title">Проект LAB</h2>
+              <p class="text">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img
-              src="/images/project9.jpg"
-              alt="Ноутбук з зображенням веб-сторінки"
-              width="370"
-              height="294"
-            />
-            <h3 class="title">Growing Business</h3>
-            <p class="text">Додаток</p>
+            <a href="" class="link">
+              <img
+                src="/images/project9.jpg"
+                alt="Ноутбук з зображенням веб-сторінки"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Growing Business</h2>
+              <p class="text">Додаток</p></a
+            >
           </li>
         </ul>
       </section>
@@ -119,10 +137,18 @@
     <footer class="footer">
       <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
       <address class="address">
-        <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="link text">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="link text">+38 096 111 11 11</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="link primary"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br /></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
