--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
           <li>
             <a href="" class="link"
               ><img
-                src="/images/project1.jpg"
+                src="./images/project1.jpg"
                 alt="Ноутбук з зображенням веб-сторінки"
                 width="370"
                 height="294"
@@ -57,7 +57,7 @@
           <li>
             <a href="" class="link">
               <img
-                src="/images/project2.jpg"
+                src="./images/project2.jpg"
                 alt="Два баскетболіста, які змагаються за м'яч"
                 width="370"
                 height="294"
@@ -69,7 +69,7 @@
           <li>
             <a href="" class="link">
               <img
-                src="/images/project3.jpg"
+                src="./images/project3.jpg"
                 alt="Логотип з написом на фоні рибини"
                 width="370"
                 height="294"
@@ -80,14 +80,19 @@
           </li>
           <li>
             <a href="" class="link">
-              <img src="/images/project4.jpg" alt="Навушники" width="370" height="294" />
+              <img src="./images/project4.jpg" alt="Навушники" width="370" height="294" />
               <h2 class="title">Проєкт Prime</h2>
               <p class="text">Маркетинг</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="/images/project5.jpg" alt="Дві картонні коробки" width="370" height="294" />
+              <img
+                src="./images/project5.jpg"
+                alt="Дві картонні коробки"
+                width="370"
+                height="294"
+              />
               <h2 class="title">Проєкт Boxes</h2>
               <p class="text">Додаток</p></a
             >
@@ -95,7 +100,7 @@
           <li>
             <a href="" class="link">
               <img
-                src="/images/project6.jpg"
+                src="./images/project6.jpg"
                 alt="Веб-сайт на моніторі комп'ютера"
                 width="370"
                 height="294"
@@ -106,14 +111,14 @@
           </li>
           <li>
             <a href="" class="link">
-              <img src="/images/project7.jpg" alt="Відкрита книга" width="370" height="294" />
+              <img src="./images/project7.jpg" alt="Відкрита книга" width="370" height="294" />
               <h2 class="title">Видання Limited Edition</h2>
               <p class="text">Дизайн</p></a
             >
           </li>
           <li>
             <a href="" class="link">
-              <img src="/images/project8.jpg" alt="Бірка з логотипом" width="370" height="294" />
+              <img src="./images/project8.jpg" alt="Бірка з логотипом" width="370" height="294" />
               <h2 class="title">Проект LAB</h2>
               <p class="text">Маркетинг</p></a
             >
@@ -121,7 +126,7 @@
           <li>
             <a href="" class="link">
               <img
-                src="/images/project9.jpg"
+                src="./images/project9.jpg"
                 alt="Ноутбук з зображенням веб-сторінки"
                 width="370"
                 height="294"
